# OpenCV3-Code-Notes

./: CMakeLists.txt  README.md  convert.sh  convert_uft8.sh  run.sh  setup_opencv.sh
00 OpenCV2版本/02_图像显示/: 2_ShowImage.cpp  CMakeLists.txt
00 OpenCV2版本/04_blur图像模糊/: 4_BlurImage.cpp  CMakeLists.txt
01_HelloOpenCV/: 1_HelloOpenCV.cpp  opencv_test_01
02_图像显示/: 2_ShowImage.cpp  opencv_test_02
03_图像腐蚀/: 3_ImageErode.cpp  opencv_test_03
04_blur图像模糊/: 4_BlurImage.cpp  opencv_test_04
05_canny边缘检测/: 5_Canny.cpp  opencv_test_05
06_播放视频/: 6_PlayVideo.cpp  opencv_test_06
07_调用摄像头/: 7_UseCamera.cpp  opencv_test_07
08_彩色目标跟踪/: 8_CamShiftDemo.cpp  opencv_test_08
09_用光流法进行运动目标检测/: 9_OpticalFlow.cpp  opencv_test_09
10_点追踪/: 10_lkdemo.cpp  opencv_test_10
11_人脸识别/: 11_ObjectDetection.cpp  opencv_test_11
12_支持向量机之SVM引导/: 12_SupportVectorMachines.cpp
13_支持向量机之处理线性不可分数据/: 13_SVMForNonLinearlySeparableData.cpp
14_printf函数用法示例/: 14_Use_printf.cpp  opencv_test_14
15_利用imwrite生成透明png图像/: 15_Use_imwrite.cpp  opencv_test_15
16_图像的载入，显示和输出/: 16_LoadShowOutputImage.cpp  opencv_test_16
17_为程序界面添加滑动条/: 17_CreateTrackbar.cpp  opencv_test_17
18_基本鼠标操作/: 18_UseMouse.cpp  opencv_test_18
19_基础图像容器Mat/: 19_UseMat.cpp  opencv_test_19
1_HelloOpenCV/: 1_HelloOpenCV.cpp
20_用OpenCV进行基本绘图/: 20_DrawImage.cpp  opencv_test_20
21_用指针访问像素/: 21_UsePointerAccessPixel.cpp  opencv_test_21
22_用迭代器访问像素/: 22_UseIteratorAccessPixel.cpp  opencv_test_22
23_用动态地址计算配合at访问像素/: 23_UseAtAccessPixel.cpp  opencv_test_23
24_遍历图像像素的14种方法/: 24_14WaysToAccessPixel.cpp  opencv_test_24
25_初级图像混合/: 25_ImageBlending.cpp  opencv_test_25
26_多通道图像混合/: 26_MultiChannelImageBlending.cpp  opencv_test_26
27_图像对比度、亮度值调整/: 27_ChangeContrastAndBright.cpp  opencv_test_27
28_离散傅里叶变换/: 28_DFT.cpp  opencv_test_28
29_XML和YAMl文件的写入/: 29_Write_XML_and_YAML_File.cpp  opencv_test_29
2_图像显示/: 2_ShowImage.cpp  opencv_test_2
30_XML和YAMl文件的读取/: 30_Read_XML_and_YAML_File.cpp  opencv_test_30
31_方框滤波boxFilter函数的使用/: 31_boxFilter.cpp  opencv_test_31
32_均值滤波blur函数的使用/: 32_blur.cpp  opencv_test_32
33_高斯模糊GaussianBlur函数的用法/: 33_GaussianBlur.cpp  opencv_test_33
34_线性图像滤波综合示例/: 34_LinearImageFilter.cpp  opencv_test_34
35_MedianBlur函数用法示例/: 35_medianBlur.cpp  opencv_test_35
36_双边滤波bilateralFilter函数使用示例/: 36_bilateralFilter.cpp  opencv_test_36
37_图像滤波综合示例/: 37_ImageFiltering.cpp  opencv_test_37
38_图像膨胀dilate函数用法示例/: 38_dilate.cpp  opencv_test_38
39_图像腐蚀erode函数用法示例/: 39_erode.cpp  opencv_test_39
3_图像腐蚀/: opencv_test_3
40_图像腐蚀与膨胀综合示例/: 40_dilate_And_erode.cpp  opencv_test_40
41_用morphologyEx进行图像膨胀/: 41_DilationEX.cpp  (+1 more)
(+161 files in other folders)
